fixed minor css flitch with scrollbar issue
Reviewed-on: http://review.membase.org/4407
Tested-by: Dustin Sallings <dustin@spy.net>

--- a/deps/menelaus/priv/public/css/screen.css
+++ b/deps/menelaus/priv/public/css/screen.css
@@ -31,7 +31,7 @@ a:hover {text-decoration:underline;}
 .link:active {outline:1px dotted gray;}
 
 html {height:100%;}
-body {height:100%;color:#444245;font-family:Helvetica, Verdana;line-height:1;background:url(../images/background.png) repeat-x;}
+body {height:100%;color:#444245;font-family:Helvetica, Verdana;line-height:1;background:url(../images/background.png) repeat-x; overflow-y:scroll; }
 
 /* universal styles */
 .nobr {white-space:nowrap;}
